@@ -1,3 +1,11 @@
+2006-10-17  Akim Demaille  <demaille@gostai.com>
+
+	Use config, add version.hh.in.
+	* version.hh.in: New.
+	* revision.mk: Adjust.
+	* README: Document it.
+	* urbi-engine.m4: Build sdk/config.h.
+
 2006-10-16  Akim Demaille  <demaille@gostai.com>
 
 	Don't point to the install kernel when compiling the kernel.
